--- a/TODO
+++ b/TODO
@@ -1,2 +1,5 @@
 Rework Content DoubleClick to be ByTab
+Keyboard bindings
+Auto Scroll a la acrobat
+Hidden Favorites (ctrl+f to reveal o hover star reveal on top left, click to reveal) with delete and hide icons
 New visuals and Marketting
