--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-Rework Content DoubleClick to be ByTab
+Manifest v3 serviceWorker
 Keyboard bindings
 Auto Scroll a la acrobat
 Hidden Favorites (ctrl+f to reveal o hover star reveal on top left, click to reveal) with delete and hide icons
