--- a/TODO
+++ b/TODO
@@ -1,5 +1,3 @@
 Manifest v3 serviceWorker
-Keyboard bindings
-Auto Scroll a la acrobat
 Hidden Favorites (ctrl+f to reveal o hover star reveal on top left, click to reveal) with delete and hide icons
-New visuals and Marketting
+New Readme and Visuals
