--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+QA Greyout
+popup options
 Manifest v3 serviceWorker
 Hidden Favorites (ctrl+f to reveal o hover star reveal on top left, click to reveal) with delete and hide icons
 New Readme and Visuals
