--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
-QA Greyout
+quicker mute and gray
+reposition buttons
+timer changeup
 popup options
 Manifest v3 serviceWorker
 refactor storage as single source of truth
