--- a/TODO
+++ b/TODO
@@ -1,7 +1,6 @@
 popup redesign
-responsive centering of display text
 Quick Hidden Icons on NewTab
 content state saves
 refactor storage as single source of truth, start with saved url settings
-New Readme and Visuals
+New Visuals
 Options help style page
