--- a/TODO
+++ b/TODO
@@ -4,3 +4,5 @@ content state saves
 refactor storage as single source of truth, start with saved url settings
 New Visuals
 Options help style page
+newtab font color purple and hmm+
+cnn automute
