--- a/TODO
+++ b/TODO
@@ -1,5 +1,4 @@
-New Visuals
+New Gif
 Quick Hidden Icons on NewTab
-content state saves
-refactor storage as single source of truth, start with saved url settings
+storage single source of truth review 
 newtab font color purple and hmm+
