--- a/TODO
+++ b/TODO
@@ -1,4 +1,7 @@
 New Gif
+options > content tabs off
 Quick Hidden Icons on NewTab
+Hold keydowns
 storage single source of truth review 
 newtab font color purple and hmm+
+display text responsive center 
