--- a/TODO
+++ b/TODO
@@ -1,7 +1,8 @@
 New Gif
-options > content tabs off
+Options > content tabs off
 Quick Hidden Icons on NewTab
 Hold keydowns
-storage single source of truth review 
-newtab font color purple and hmm+
-display text responsive center 
+Storage as single source of truth review 
+Newtab font color purple and hmm+
+Display text responsive center 
+Repo rename
