--- a/TODO
+++ b/TODO
@@ -3,6 +3,6 @@ Options > content tabs off
 Quick Hidden Icons on NewTab
 Hold keydowns
 Storage as single source of truth review 
-Newtab font color purple and hmm+
+Newtab font color purple, timer and hmm+
 Display text responsive center 
-Repo rename
+Store Deploy Actions
