--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 Better Gif
 Options > content tabs off
 Quick Hidden Icons on NewTab
-Hold keydowns
+Hold reverse for keydowns
 Storage as single source of truth review 
 Newtab font color purple, timer and hmm+
 Display text responsive center 
