--- a/TODO
+++ b/TODO
@@ -1,8 +1,6 @@
 Better Gif
-Options > content tabs off
 Quick Hidden Icons on NewTab
-Hold reverse for keydowns
 Storage as single source of truth review 
-Newtab font color purple, timer and hmm+
+Newtab easy timer and hmm+
 Display text responsive center 
 Store Deploy Actions
