--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 Newtab easy timer and hmm+
 Storage as single source of truth review 
+Dedicated popup port or no repeat messaging
 io page
 packaging on ubuntu?
