--- a/TODO
+++ b/TODO
@@ -2,4 +2,5 @@ Newtab easy timer and hmm+
 Storage as single source of truth review 
 Dedicated popup port or no repeat messaging
 io page
-packaging on ubuntu?
+report for improvement
+onInstalled welcome modal and initial settings save
