--- a/TODO
+++ b/TODO
@@ -2,5 +2,6 @@ Newtab easy timer and hmm+
 Storage as single source of truth review 
 Dedicated popup port or no repeat messaging
 io page
+Newtab Toggle in Options
 report for improvement
 onInstalled welcome modal and initial settings save
