--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-Newtab easy timer and hmm+
+Newtab easy timer and visual alarm ripple animation
 Storage as single source of truth review 
 Dedicated popup port or no repeat messaging
 io page
